--- a/app/assets/stylesheets/todos.css.scss
+++ b/app/assets/stylesheets/todos.css.scss
@@ -1,3 +1,10 @@
 // Place all the styles related to the todos controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+//variables
+@import "todos/variables";
+
+//scss
+@import "todos/index";
+@import "todos/forms";
