--- a/app/views/todos/index.html.erb
+++ b/app/views/todos/index.html.erb
@@ -1,25 +1,34 @@
-<%= link_to "New Todo", "/todos/new" %>
+<div class="container">
+  <div class="row col-sm-6 col-sm-offset-3 todo-wrapping-div">
+    <%= link_to "New Todo", "/todos/new", class: "pull-right" %>
 
-<h2>My TODOs</h2>
+    <div class="todo-content col-sm-offset-2 col-sm-8">
+      <h2>My TODOs</h2>
 
-<% if flash[:notice] %>
-  <span style="background-color: #C8D6FF"><%= flash[:notice] %></span>
-<% end %>
+      <% if flash[:notice] %>
+        <span style="background-color: #C8D6FF"><%= flash[:notice] %></span>
+      <% end %>
 
-<ul id="todos-list">
-  <% @todos.each do |todo| %>
-    <li data-todo-id=<%="#{todo.id}"%>>
-      <input style="display: none" type="text">
-      <div style="display: inline">
-        <span><%= todo.title %></span>
-        <a href="#">edit</a>
-        <%= link_to "delete", todo, method: :delete %>
-      </div>
-     </li>
-  <% end %>
-</ul>
+      <ul id="todos-list">
+        <% @todos.each do |todo| %>
+          <li data-todo-id=<%="#{todo.id}"%>>
+            <input style="display: none" type="text">
+            <div style="display: inline">
+              <span><%= todo.title %></span>
+              <div style="display: inline" class="pull-right">
+                <a href="#">edit</a>
+                <%= link_to "delete", todo, method: :delete %>
+              </div>
+              </span>
+            </div>
+           </li>
+        <% end %>
+      </ul>
+    </div>
 
-<%= form_tag "/todos", method: "get" do %>
-  <%= text_field_tag :q %>
-  <%= submit_tag "filter" %>
-<% end %>
+    <%= form_tag "/todos", method: "get", class: "form-inline" do %>
+      <%= text_field_tag :q , nil, {class: "form-control input-sm"} %>
+      <%= submit_tag "filter", class: "btn btn-sm btn-primary" %>
+    <% end %>
+  </div>
+</div>
