--- a/app/views/todos/new.html.erb
+++ b/app/views/todos/new.html.erb
@@ -1,12 +1,16 @@
-<div style="margin-bottom: 20px">
-  <%= link_to "Back to index", "/todos" %>
-</div>
+<div class="container">
+  <div class="row col-sm-6 col-sm-offset-3 new-todo">
+    <div style="margin-bottom: 20px">
+      <%= link_to "Back to index", "/todos" %>
+    </div>
 
-<% if flash[:notice] %>
-  <p style="background-color: #FFA6A6; max-width: 300px"> <%= flash[:notice] %> </p>
-<% end %>
+    <% if flash[:notice] %>
+      <p style="background-color: #FFA6A6; max-width: 300px"> <%= flash[:notice] %> </p>
+    <% end %>
 
-<%= form_tag ({action: "create"}) do %>
-  <%= text_field_tag :title %>
-  <%= submit_tag "Create" %>
-<% end %>
+    <%= form_tag ({action: "create"}), {class: "form-inline"} do %>
+      <%= text_field_tag :title, nil, class: "form-control input-sm" %>
+      <%= submit_tag "Create", class: "btn btn-sm btn-default" %>
+    <% end %>
+  </div>
+<div>
