--- a/app/views/todos/new.html.erb
+++ b/app/views/todos/new.html.erb
@@ -10,7 +10,10 @@
 
     <%= form_tag ({action: "create"}), {class: "form-inline"} do %>
       <%= text_field_tag :title, nil, class: "form-control input-sm" %>
-      <%= submit_tag "Create", class: "btn btn-sm btn-default" %>
+      <%= select_tag :user_id,
+          options_from_collection_for_select(@users, :id, :name),
+          class: "form-control input-sm" %>
+      <%= submit_tag "Create", class: "btn btn-sm btn-primary" %>
     <% end %>
   </div>
 <div>
